--- a/static/css/bundle.css
+++ b/static/css/bundle.css
@@ -1,6 +1,8 @@
-.app__element___ICNma {
-    background-color: blue;
+.app__test___2Hu7O {
+    background-color: red;
     color: white;
     font-size: 20px;
     padding: 20px;
 }
+
+/*# sourceMappingURL=bundle.css.map*/
