Fixed issuescaused by .yarnclean file by removing .yarnclean and node_modules and re-installing. Note to self, don't use yarn clean command

--- a/static/css/bundle.css
+++ b/static/css/bundle.css
@@ -1,8 +1,2 @@
-.app__test___2Hu7O {
-    background-color: red;
-    color: white;
-    font-size: 20px;
-    padding: 20px;
-}
-
+.app__test___2Hu7O{background-color:green;color:#000;font-size:20px;padding:20px}
 /*# sourceMappingURL=bundle.css.map*/
