--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,6 @@
-.test {
-    background-color: red;
-    color: white;
+.test{
+    background-color: green;
+    color: black;
     font-size: 20px;
     padding: 20px;
 }
