Split the config file to make it more extensible and follow best practices. Also re-implemented the Webpack dev server and enabled hot module replacement.

--- a/source/styles/app.css
+++ b/source/styles/app.css
@@ -1,6 +1,6 @@
 .test{
-    background-color: green;
-    color: black;
+    background-color: blue;
+    color: white;
     font-size: 20px;
     padding: 20px;
 }
