Completed splitting of the config file with completelely separate dev and build workflows. Added autoprefixing.

--- a/source/template.ejs
+++ b/source/template.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>test</title>
+        <title>React Now Base</title>
     </head>
     <body>
     <div class="container"></div>
